# rumidup

./: Cargo.toml  Changelog.md  Dockerfile  LICENSE  README.md
.github/workflows/: container.yml  dockerhub.yml  release.yml  testing.yml
src/: app.rs  bktree.rs  cli.yaml  dups.rs  header.rs  io.rs  main.rs  markdups.rs  metrics.rs  optical.rs  reader.rs  record.rs
