[package]
name = "rumidup"
version = "0.2.4"
authors = ["Arno Velds <a.velds@nki.nl>", "Roel Kluin <r.kluin@nki.nl>"]
edition = "2021"
description = "Rumidup is a UMI aware mark duplicates tool for NGS sequencing data."
readme = "README.md"
license = "MIT"
keywords = ["command-line-utilities" ,"science"]
exclude = ["publication"]
publish = false

[features]
zlib-ng = ["flate2/zlib-ng"]

[dependencies]
anyhow = "1.0.43"
tokio = { version = "1.11", features = ["fs", "io-std", "macros", "rt-multi-thread"] }
noodles-bam = { version = "0.52.0", features = ["async"] }
noodles-core = "0.13.0"
noodles-sam = "0.49.0"
noodles-csi = "=0.29.0"
noodles-bgzf = { version = "0.26.0", features = ["async"] }
clap = { version = "4.5.21", features = ["cargo", "derive", "wrap_help"] }
thiserror = "2.0.9"
regex = "1.5.4"
ahash = "0.8.0"
smallvec = "1.7.0"
vec_map = "0.8.2"
flate2 = { version = "1.0.24", optional = true}

[profile.release]
debug = 1
